Fix mobile banner text displaying with underline on mobile

--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -36,6 +36,10 @@
         display: none;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .slick-next,
     .slick-prev {
         top: 50%;
